trybuild-qcell/src/compiletest/qcell-15.stderr
error[E0502]: cannot borrow `cell` as immutable because it is also borrowed as mutable
  --> src/compiletest/qcell-15.rs:9:31
   |
8  |     let cell_ref = cell.get_mut();
   |                    -------------- mutable borrow occurs here
9  |     assert_eq!(100, *owner.rw(&cell)); // Compile fail
   |                               ^^^^^ immutable borrow occurs here
10 |     *cell_ref = 50;
   |     -------------- mutable borrow later used here
